Added opensearch learning